tests/fixtures/svs-v3/invalid/wrong-data-name.hex
245a0658071108036e646e0807737065633131343601021400151ac918ca16070908046e6f6465080161d209d4046553f100d6010116031b01001720bd908c94b5f044a6de7d169ee73ed8dd7a80d28ba392abcbed01018b5c378461
